--- a/paisajes.html
+++ b/paisajes.html
@@ -25,12 +25,12 @@
         </header>
 
         <section class="galeria">
-            <div class="contenedor"><img id="img1" src="img/paisaje1.jpg" alt="paisaje"></div>
-            <div class="contenedor"><img id="img2" src="img/paisaje1.jpg" alt="paisaje"></div>
-            <div class="contenedor"><img id="img3" src="img/paisaje1.jpg" alt="paisaje"></div>
-            <div class="contenedor"><img id="img4" src="img/paisaje1.jpg" alt="paisaje"></div>
-            <div class="contenedor"><img id="img5" src="img/paisaje1.jpg" alt="paisaje"></div>
-            <div class="contenedor"><img id="img6" src="img/paisaje1.jpg" alt="paisaje"></div>
+            <div class="contenedor"><img src="img/paisaje1.jpg" alt="paisaje"></div>
+            <div class="contenedor"><img src="img/paisaje1.jpg" alt="paisaje"></div>
+            <div class="contenedor"><img src="img/paisaje1.jpg" alt="paisaje"></div>
+            <div class="contenedor"><img src="img/paisaje1.jpg" alt="paisaje"></div>
+            <div class="contenedor"><img src="img/paisaje1.jpg" alt="paisaje"></div>
+            <div class="contenedor"><img src="img/paisaje1.jpg" alt="paisaje"></div>
         </section>
 
         <footer class="pie">
